Small formatting cleanup and improve the components figure in ch. 4.

--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -209,7 +209,7 @@ The term REST or RESTful is sometimes misunderstood,
 but in Roy Fielding's original 2000 Ph.D. thesis, 
 REST\index{REST} refers to transferring \textit{representations} of application state and using hypertext as the engine of 
 application state\index{HATEOAS}\footnote{Known under the somewhat awkward acronym of HATEOAS\index{HATEOAS}.}~\cite{fielding2000}.
-Specifically, `objects' of whatever type are represented as interlinked hypertext \textbf{\textit{resources}} that are operated on by standard HTTP verbs\index{HTTP!verbs} such as PUT\index{HTTP!PUT} and DELETE\index{HTTP!DELETE}.
+Specifically, `objects' of whatever type are represented as interlinked hypertext \textbf{\textit{resources}} that are operated on by standard HTTP verbs\index{HTTP!verbs} such as \tcode{PUT}\index{HTTP!PUT} and \tcode{DELETE}\index{HTTP!DELETE}.
 For example, in a Speakur\index{Speakur} thread, a particular user comment (post) is an abstract \textit{resource} located at the following uniform resource locator (URL):
 
 \tcode{https://YOUR-DB.firebaseio.com/posts/\$ParentId/\$PostId}
