--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -152,7 +152,7 @@ Then you can place your new element on the page, either declaratively in HTML:
 
 or imperatively with JavaScript\index{JavaScript}:
 
-\begin{lstlisting}[language=JavaScript,caption={Registering a Custom Element\index{Custom Element} in JavaScript\index{JavaScript}.},label=l:register]
+\begin{lstlisting}[language=JavaScript,caption={Registering a custom element\index{Custom Element} in JavaScript\index{JavaScript}.},label=l:register]
  var MyElement = document.registerElement('my-element');
 
  // create a new instance of the element
@@ -308,7 +308,7 @@ Creating a web site or application that adjusts to the smaller screen of a mobil
 Before the addition of responsive design features to the HTML\index{HTML} spec, 
 it was always possible to make manual layout adjustments in JavaScript\index{JavaScript} but this was sometimes brittle and error-prone.
 
-Besides JavaScript\index{JavaScript}, there are three main CSS techniques that can be used to make a responsive design: 
+Besides JavaScript\index{JavaScript}, at least three CSS techniques can be used to make a responsive design: 
 the \tcode{@media}\index{@media} rule, 
 the Grid\index{Grid} layout, 
 and Flexible (Flex)\index{Flex} boxes.
