--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -54,7 +54,7 @@ much less a full-fledged dynamic application,
 out of Lego-like reusable building blocks seemed like a distant dream at best. 
 The introduction of the 
 JavaScript\index{JavaScript}\footnote{JavaScript, also rendered as Javascript or JS, 
-has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized under the name ECMAScript (ES)\index{ECMAScript (JavaScript)}.}
+has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized as ECMAScript (ES)\index{ECMAScript (JavaScript)}.}
 (JS)\index{JavaScript} programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
 Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
 Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts didn't step on each other's toes, else disaster frequently ensued. 
@@ -78,7 +78,7 @@ has emerged as a dominant client framework,
 due in part to its perceived high quality and the fact that it represents an common point for a fragmented industry to rally around~\cite{dickey2014}.
 Facebook's React\index{React} library with its Virtual DOM is an up-and-comer focused on high performance that is more complementary in nature to Angular than a true challenger, 
 focusing primarily on the ``view'' part of the common 
-model-view-controller\index{model-view-controller}(MVC) 
+model-view-controller\index{model-view-controller} (MVC) 
 design pattern~\cite{reactcontributors2015}.
 
 Yet despite the emergence of the updated HTML5\index{HTML!HTML5} standard in 2011 and the recent successes of web frameworks like Angular\index{Angular} and React\index{React} in capturing developer attention, 
@@ -183,7 +183,7 @@ These files constitute an \textit{HTML Import}\index{HTML!Imports} package that 
 custom HTML element\index{Custom Elements} for the use of web authors in their own pages.
 An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in briefly in Listing~\ref{l:example1} below.
 
-\begin{lstlisting}[language=HTML5,caption={Example of the Speakur custom HTML element},label=l:example1]
+\begin{lstlisting}[language=HTML5,caption={Speakur custom HTML element},label=l:example1]
  <!-- place this on your page
       where you want a discussion -->
  <speakur-discussion
