--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -93,7 +93,7 @@ and other organizations got together in 2012 under a W3C Web Applications Workin
 to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5\index{HTML!HTML5} in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
 For example, as of the time of this writing, a rewrite of Angular\index{Angular} called Angular 2.0 is slated to include Web Components as a core architectural element~\cite{santiagoesteva2015}.
 
-\section{Web Components Overview}
+\section{Web Components overview}
 Fundamentally, the Web Components standard consists of four new core DOM technologies --- extensions to the current HTML5\index{HTML!HTML5} standard.
 If these standards are accepted by major browser vendors and the World Wide Web Consortium (W3C)
 \index{W3C}
@@ -144,7 +144,7 @@ The move towards a component-based Web will enable interesting new composite ser
 What previously required a highly integrated, high-overhead development model or lots of tedious glue code can become as simple as importing a custom element and dropping it onto a page.
 
 
-\section{Structure of This Report}
+\section{Structure of this report}
 \index{Structure of This Report@\emph{Structure of This Report}}%
 
 The goal of this report is to demonstrate the application of 
@@ -174,7 +174,7 @@ A few quantitative results are included, I hope \textbf{(TODO)}.
 
 Finally, the Conclusion section is there and wraps up the report with various words \textbf{(TODO)}. 
 
-\section{Source Code and Demonstration Resources}
+\section{Source code and demonstration resources}
 \index{Speakur source code@\emph{Speakur source code}}%
 
 The source code for Speakur consists of HTML\index{HTML} and JavaScript\index{JavaScript} files located in a Git\index{Git} version control repository. 
