--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -100,16 +100,6 @@
 	howpublished = {http://japhr.blogspot.com/2014/02/i18next-polymer-and-pluralization.html}
 },
 
-@online{landers2015-a,
-	title = {Polymer: adding implicit arguments to function calls in expressions - Stack Overflow},
-	shorttitle = {Polymer},
-	url = {http://stackoverflow.com/questions/28530725/polymer-adding-implicit-arguments-to-function-calls-in-expressions},
-	author = {Landers, Preston},
-	month = feb,
-	year = {2015},
-	howpublished = {http://stackoverflow.com/questions/28530725/polymer-adding-implicit-arguments-to-function-calls-in-expressions}
-},
-
 @techreport{hickson2014,
 	type = {{W3C} Recommendation 28 October 2014},
 	title = {{HTML5} A vocabulary and associated {APIs} for {HTML} and {XHTML}},
@@ -146,7 +136,7 @@
 	howpublished = {https://pascalprecht.github.io/2014/07/14/inheritance-and-composition-with-polymer/}
 },
 
-@online{landers2015-b,
+@online{landers2015-a,
 	title = {Eurgh! translation software},
 	url = {https://github.com/Preston-Landers/eurgh},
 	abstract = {Eurgh! is a translation utility using Microsoft Translate {API}},
@@ -416,8 +406,8 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	howpublished = {http://www.allenpike.com/2015/javascript-framework-fatigue/}
 },
 
-@online{landers2015-c,
-	title = {{Speakur-Discussion}},
+@online{landers2015-b,
+	title = {{Speakur-Discussion} {(GitHub)}},
 	url = {https://github.com/Preston-Landers/speakur-discussion},
 	abstract = {An {HTML5} Web Component Custom Element to implement a disscussion forum for a blog or other website.},
 	author = {Landers, Preston},
@@ -426,8 +416,8 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	howpublished = {{https://github.com/Preston-Landers/speakur-discussion}}
 },
 
-@online{landers2015-d,
-	title = {Speakur Demo},
+@online{landers2015-c,
+	title = {Speakur Demonstration},
 	url = {https://preston-landers.github.io/speakur-discussion/components/speakur-discussion/demo.html},
 	abstract = {Demonstration page for {Speakur-Discussion} custom element},
 	author = {Landers, Preston},
@@ -706,4 +696,23 @@ Named for the Vulcanization process that turns polymers into more durable materi
 	month = mar,
 	year = {2015},
 	howpublished = {https://www.polymer-project.org/0.5/docs/polymer/layout-attrs.html}
+},
+
+@online{landers2015-d,
+	title = {Multiple {\textless}core-overlay{\textgreater} layers},
+	url = {https://github.com/Polymer/paper-dialog/issues/50#issuecomment-76563028},
+	abstract = {Multiple {\textless}core-overlay{\textgreater} layers},
+	author = {Landers, Preston},
+	month = feb,
+	year = {2015},
+	howpublished = {{https://github.com/Polymer/paper-dialog/issues/50\#issuecomment-76563028}}
+},
+
+@online{bosoniccontributors2014,
+	title = {Bosonic Web Components},
+	url = {http://bosonic.github.io/},
+	author = {Bosonic contributors},
+	month = dec,
+	year = {2014},
+	howpublished = {http://bosonic.github.io/}
 }
