--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -301,7 +301,7 @@ The following example shows how to populate a JS variable with the element that 
 %E.g. instead of facebook providing a <like-button> element, they provide <facebook-like-button>.
 %apparently this may be an area of future development  (citation?)
 
-\subsection{Responsive Layout for Mobile}
+\subsection{Responsive layout for mobile}
 
 The rise of smartphones and other mobile\index{mobile} devices has accelerated the need for web developers to make their applications responsive to the type of client used to access it.
 Creating a web site or application that adjusts to the smaller screen of a mobile phone is often known as \textit{responsive design}\index{responsive design}.
@@ -320,7 +320,7 @@ This includes different layouts for portrait vs. landscape device orientation.
 The CSS Flexible Boxes model (Flex)\index{Flex} is intended for adjusting the flow of smaller page components~\cite{mozillacontributors2015}.
 Flex boxes are useful for general user interface\index{user interface (UI)} (UI) structure, not just device-responsive design, and are widely used in Polymer\index{Polymer} and in Speakur\index{Speakur}~\cite{polymercontributors2015-d}.
 
-\section{Polymer Framework}
+\section{Polymer framework}
 
 The exciting possibilities offered by Web Components seemed to call for a new framework engineered from the ground-up to take advantage of it.
 In light of that, a team within Google\index{Google} developed the 
@@ -331,7 +331,7 @@ Because Web Components are a bleeding-edge feature not yet natively implemented 
 the Polymer developers opted to create a \textit{polyfill}\index{polyfill}, 
 library to fill in these missing features to the degree possible.
 This polyfill is used in several other Web Components related projects such as 
-X-Tags\index{X-Tags}~\cite{x-tagscontributors2015}.
+X-Tags\index{X-Tags}~\cite{x-tagscontributors2015} and Bosonic~\cite{bosoniccontributors2014}\index{Bosonic}.
 Unfortunately polyfills cannot provide a 100\% complete Web Components implementation; 
 only native browser support can.
 
@@ -379,7 +379,7 @@ internationalization\index{internationalization}
 localization\index{localization} (l10n) features for a global audience.\label{motive:i18n}
 
 \item If any framework was used at all, it should be based on Web Components\index{Web Components}.\label{motive:webcomponents} This ruled out the vast majority of frameworks, 
-leaving only Polymer\index{Polymer} and the less-comprehensive X-Tags\index{X-Tags} project~\cite{x-tagscontributors2015} and a few other less ambitious contenders.
+leaving only Polymer\index{Polymer} and the less-comprehensive X-Tags\index{X-Tags}~\cite{x-tagscontributors2015} and Bosonic~\cite{bosoniccontributors2014}\index{Bosonic} projects and a few other less ambitious contenders.
 
 \end{enumerate}
 
