--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -29,7 +29,7 @@ Speakur's\index{Speakur} options or parameters are controlled with attributes\in
 %Responsive design with \tcode{flex} and \tcode{@media} attributes adjusts the interface automatically for desktop and mobile users.
 %Speakur takes advantage of data bindings to offer localization features that instantly update when the language preference is changed.
 
-\section{Layout and Structure}
+\section{Layout and structure}
 \label{sec:layout}
 
 Structurally, Speakur\index{Speakur} consists of JavaScript\index{JavaScript}, HTML, and CSS\index{CSS} files, along with a few other resource types like images and JSON\index{JSON} language files. 
@@ -119,7 +119,7 @@ in a way that is similar but not identical to classes in object oriented program
 Similar behavior is obtained by using regular object instances (instead of classes) as the prototype for instantiating new objects.}. 
 Although composition or \textit{has-a} relationships are generally preferred, inheritance or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another interchangeably.
 
-\section{Database Design}
+\section{Database design}
 \label{sec:database}
 
 Speakur uses Firebase for NoSQL\index{NoSQL}-style database storage.
@@ -195,7 +195,7 @@ which can be difficult in a more sophisticated application.
 But in the post vote count example, even if a malicious user sets a false count on the globally-visible value,
 we can always recalculate the true count later using the individual user vote records.
 
-\section{Component Synchronization}
+\section{Component synchronization}
 \label{sec:sync}
 
 Speakur\index{Speakur} consists of a number of Polymer\index{Polymer} components which break down the problem of presenting a discussion forum into smaller tasks.
@@ -221,7 +221,7 @@ or in some cases the relevant object is passed in as a binding from a parent ele
 This keeps database specific knowledge localized to each component, helping it ``be composable''.
 Speakur\index{Speakur} as a whole doesn't know or care what storage solution its individual components use, whether Firebase\index{Firebase} or another API\index{API}.
 
-\subsection{Data Bindings and Events}
+\subsection{Data bindings and events}
 \label{sec:databindings}
 From an MVC\index{model-view-controller} viewpoint, a Polymer element with instance variables \textit{is} the `model'.
 The element's data-bound\index{data-bound template} \tcode{<template>}\index{<template>} is the `view', 
@@ -289,7 +289,7 @@ A handler in the top level container (\tcode{<speakur-discussion>}\index{<speaku
 This in turn sets the \tcode{\textbf{lc}} (locale) property in the base element.
 This property is then used in translation expressions as discussed in section~\ref{sec:i18n} below.
 
-\subsection{Data-Bound Templates}
+\subsection{Data-bound templates}
 Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
 This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
 As mentioned above, the custom element itself is the `model' and its \tcode{<template>} is the view.
@@ -338,7 +338,7 @@ Inside Speakur, authentication is handled by the \tcode{<firebase-login>} elemen
 A binding is set up between that and the \tcode{user} variable in \tcode{<speakur-discussion>}\index{<speakur-discussion>} so that when user authentication is completed, the \tcode{user} variable contains an object with user properties like their authentication ID and other data.
 The authentication\index{authentication} session is automatically used by any \tcode{<firebase-element>} anywhere on the page provided that their \tcode{location=} points to the same database base URL.
 
-\subsection{Firebase Security Policy Rules}
+\subsection{Firebase security rules}
 \label{sec:fbsecurity}
 
 Authorization to perform any given action in the Speakur database is determined by consulting the nested rules in the 
@@ -443,7 +443,7 @@ For example, immediately after posting a new reply, its header will say ``posted
 After a minute it will say ``posted a minute ago'', and so on in idiomatic fashion appropriate to the current language.
 This text has a tooltip which gives the localized full date such as ``Wednesday, March 11th 2015 7:53 pm''.
 
-\section{Responsive Design}
+\section{Device responsive design}
 \label{sec:responsive}
 As mentioned in section~\ref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
 including mobile phones.
@@ -478,7 +478,7 @@ Polymer\index{Polymer} provides convenient layout shortcuts for the standard CSS
 %\end{lstlisting}
 
 
-\section{Publishing and Deployment}
+\section{Publishing and deployment}
 \label{publishing}
 
 Speakur\index{Speakur} is published to \tcode{github.io}, 
@@ -488,7 +488,7 @@ Web authors can also host Speakur's files on their own server if desired.
 This makes it very easy to deploy\index{deployment} Speakur in a wide variety of system architectures.
 Speakur\index{Speakur} is provided in two versions; 
 the `development' version where each resource is provided as a separate, raw, non-minified file,
-and a `production' or Vulcanized version where all necessary resources are combined into a single file for faster loading speeds~\cite{polymercontributors2015-a}. 
+and a `production' or Vulcanized\index{Vulcanize} version where all necessary resources are combined into a single file for faster loading speeds~\cite{polymercontributors2015-a}. 
 In a relatively small application like Speakur the difference is not huge, especially on Google Chrome\index{Google!Google Chrome} which already supports Web Components natively,
 because the HTML component transfer times are largely dwarfed by the cost of loading the actual discussion from the database.
 Future protocol enhancements like HTTP 2\index{HTTP!HTTP 2.0} may eliminate this discrepancy.
@@ -503,15 +503,15 @@ Table~\ref{table:speakurloading} which compares the time (in milliseconds) to in
 \toprule
 State & Raw & Vulcanized \\
 \midrule
-\textit{Google Chrome}\index{Google!Google Chrome} \\ 
+\textbf{Google Chrome}\index{Google!Google Chrome} \\ 
 visible & 2200 & 1150 \\
 complete & 4200 & 2900 \\
 \\
-\textit{Mozilla Firefox}\index{Mozilla!Mozilla Firefox}\index{Firefox} \\ 
+\textbf{Mozilla Firefox}\index{Mozilla!Mozilla Firefox}\index{Firefox} \\ 
 visible & 7400 & 6050 \\
 complete & 12000 & 10500 \\
 \\
-\textit{Opera}\index{Opera} \\ 
+\textbf{Opera}\index{Opera} \\ 
 visible & 2800 & 1100 \\
 complete & 7000 & 2800 \\
 \bottomrule
